--- a/AsciiDoc_Sample_006.adoc
+++ b/AsciiDoc_Sample_006.adoc
@@ -7,13 +7,13 @@
 :lang: ja
 :doctype: book
 :author: Author
-:revdate: 2019年11月3日
-:revnumber: 1.2版
+:revdate: 2022年7月11日
+:revnumber: 1.3版
 :version-label:
 // ディレクトリやテーマファイルなどの設定
-:pdf-style: my-theme2.yml
 :imagesdir: ./img
-//:pdf-fontsdir: ../fonts
+:pdf-themesdir: ./
+:pdf-theme: my-theme.yml
 // 背景設定
 :title-page-background-image: image:title-page-back.png[]
 //:front-cover-image: image:title-page.pdf.pdf[]
@@ -64,22 +64,22 @@ title_page: //<1>
     top: 60%
     font_size: $heading_h1_font_size
     font_stye: bold
-    font_color: [255,255,255]
+    font_color: #FFFFFF
     line_height: 0.9
   subtitle: //<4>
     font_size: $heading_h3_font_size
     font_style: bold
-    font_color: [255,255,255]
+    font_color: #FFFFFF
     line_height: 1
   authors: //<5>
     font_size: $base_font_size_large
     font_style: normal
-    font_color: [255,255,255]
+    font_color: #FFFFFF
     margin_top: $base_font_size * 1.25
   revision: //<6>
     font_size: $base_font_size
     font_style: normal
-    font_color: [255,255,255]
+    font_color: #FFFFFF
     margin_top: $base_font_size * 1.25
     delimiter: "<br/>" //<7>
 ----
